<resources>
    <string name="app_name">Quiz App</string>
    <string name="worldFlag1">Q1: Select the country that has this flag</string>
    <string name="worldFlag2">Q2: Select the countries that have these flags</string>
    <string name="worldFlag3">Q3: Select the country that has this flag</string>
    <string name="worldFlag4">Q4: Select the country that has this flag</string>
    <string name="worldFlag5">Q5: Select the countries that have these flags</string>
    <string name="flag1c1">Canada</string>
    <string name="flag1c2">Taiwan</string>
    <string name="flag1c3">China</string>
    <string name="flag1c4">Peru</string>

    <string name="flag2c1">Brazil</string>
    <string name="flag2c2">Ivory Coast</string>
    <string name="flag2c3">Argentina</string>
    <string name="flag2c4">Luxembourg</string>

    <string name="flag3c1">Netherlands</string>
    <string name="flag3c2">Taiwan</string>
    <string name="flag3c3">China</string>
    <string name="flag3c4">Slovakia</string>

    <string name="flag4c1">Canada</string>
    <string name="flag4c2">India</string>
    <string name="flag4c3">Brazil</string>
    <string name="flag4c4">South Korea</string>

    <string name="flag5c1">Canada</string>
    <string name="flag5c2">Taiwan</string>
    <string name="flag5c3">South Africa</string>
    <string name="flag5c4">United Kingdom</string>

</resources>
