<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/name"
        android:layout_alignBottom="@+id/name"
        android:layout_alignTop="@id/name"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="Logout"
        android:onClick="logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/previous"
        android:layout_below="@id/name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/worldFlag5" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/image5" />

            <CheckBox
                android:id="@+id/flag5c1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onChoiceSelected"
                android:text="@string/flag5c1" />

            <CheckBox
                android:id="@+id/flag5c2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onChoiceSelected"
                android:text="@string/flag5c2" />

            <CheckBox
                android:id="@+id/flag5c3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onChoiceSelected"
                android:text="@string/flag5c3" />

            <CheckBox
                android:id="@+id/flag5c4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onChoiceSelected"
                android:text="@string/flag5c4" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/state"
        android:layout_alignBottom="@+id/state"
        android:layout_alignStart="@+id/name"
        android:onClick="goPrevious"
        android:text="Previous" />

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:gravity="center" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/state"
        android:onClick="nextOrfinish"
        android:layout_alignStart="@+id/logout"/>


</RelativeLayout>